main/default/objects/Workstep__c/fields/Attribute__c.field-meta.xml
<CustomField>
    <fullName>Attribute__c</fullName>
    <label>Attribute</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Activate with Customer</fullName>
            </value>
            <value>
                <fullName>CCD Driven</fullName>
            </value>
            <value>
                <fullName>CLICK Activation Date Driven</fullName>
            </value>
            <value>
                <fullName>Exclude From PDD Calculation</fullName>
            </value>
            <value>
                <fullName>FOC</fullName>
            </value>
            <value>
                <fullName>FOC Driven</fullName>
            </value>
            <value>
                <fullName>Hardware Install and Test</fullName>
            </value>
            <value>
                <fullName>Schedule Resources</fullName>
            </value>
            <value>
                <fullName>Schedule Install Resources</fullName>
            </value>
            <value>
                <fullName>Schedule Activation Resources</fullName>
            </value>
            <value>
                <fullName>Estimated Permit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>