main/default/objects/Workstep__c/fields/BlockedByCode__c.field-meta.xml
<CustomField>
    <fullName>BlockedByCode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BlockedByCode</label>
    <type>Checkbox</type>
</CustomField>