main/default/objects/Workstep__c/fields/Callout_Error__c.field-meta.xml
<CustomField>
    <fullName>Callout_Error__c</fullName>
    <label>Callout Error</label>
    <type>TextArea</type>
</CustomField>