main/default/objects/Workstep__c/fields/CTP_Communication_Type__c.field-meta.xml
<CustomField>
    <fullName>CTP_Communication_Type__c</fullName>
    <label>CTP Communication Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Lync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>