main/default/objects/Workstep__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Expected End Date</label>
    <type>Date</type>
</CustomField>