main/default/objects/Workstep__c/fields/External_Order__c.field-meta.xml
<CustomField>
    <fullName>External_Order__c</fullName>
    <formula>Sub_Order__r.External_Order__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Order</label>
    <type>Text</type>
</CustomField>