main/default/objects/Workstep__c/fields/Missed_Reason__c.field-meta.xml
<CustomField>
    <fullName>Missed_Reason__c</fullName>
    <label>Missed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Feature Incorrectly Applied</fullName>
            </value>
            <value>
                <fullName>FOC Rec&#39;d Late</fullName>
            </value>
            <value>
                <fullName>Missed Adding Block</fullName>
            </value>
            <value>
                <fullName>Resource Constraint</fullName>
            </value>
            <value>
                <fullName>Technical Constraint</fullName>
            </value>
            <value>
                <fullName>Tech Not Available or Late</fullName>
            </value>
            <value>
                <fullName>Third Party Delivered Late</fullName>
            </value>
            <value>
                <fullName>User Error</fullName>
            </value>
            <value>
                <fullName>System Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>