main/default/objects/Workstep__c/fields/On_time_Late_Workstep__c.field-meta.xml
<CustomField>
    <fullName>On_time_Late_Workstep__c</fullName>
    <formula>IF(ISBLANK(Actual_Completion_Date__c),   End_Date__c - TODAY(), End_Date__c - Actual_Completion_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>On-time/Late Workstep</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>