main/default/objects/Workstep__c/fields/Order_Location__c.field-meta.xml
<CustomField>
    <fullName>Order_Location__c</fullName>
    <formula>Sub_Order__r.Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Location</label>
    <type>Text</type>
</CustomField>