main/default/objects/Workstep__c/fields/Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reason__c</fullName>
    <label>Risk Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Reason1</fullName>
            </value>
            <value>
                <fullName>Reason2</fullName>
            </value>
            <value>
                <fullName>Reason3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>