main/default/objects/Workstep__c/fields/SPC_Product__c.field-meta.xml
<CustomField>
    <fullName>SPC_Product__c</fullName>
    <formula>Sub_Order__r.SPC_Product__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPC Product</label>
    <type>Text</type>
</CustomField>