main/default/objects/Workstep__c/fields/Tag_Date__c.field-meta.xml
<CustomField>
    <fullName>Tag_Date__c</fullName>
    <inlineHelpText>Use in conjunction with the Tag field as a reminder date</inlineHelpText>
    <label>Tag Date</label>
    <type>Date</type>
</CustomField>