main/default/objects/Workstep__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>Workstep_Template__c</referenceTo>
    <relationshipLabel>Worksteps</relationshipLabel>
    <relationshipName>Worksteps</relationshipName>
    <type>Lookup</type>
</CustomField>