main/default/objects/Workstep__c/fields/Unblocked_Date__c.field-meta.xml
<CustomField>
    <fullName>Unblocked_Date__c</fullName>
    <description>This date is added when a workstep issue is resolved to show the latest unblocked date.</description>
    <label>Unblocked Date</label>
    <type>Date</type>
</CustomField>