main/default/objects/Workstep__c/fields/Workstep_First_Opened_Date__c.field-meta.xml
<CustomField>
    <fullName>Workstep_First_Opened_Date__c</fullName>
    <label>Workstep First Opened Date</label>
    <type>DateTime</type>
</CustomField>