main/default/objects/Workstep__c/fields/Workstep_Number__c.field-meta.xml
<CustomField>
    <fullName>Workstep_Number__c</fullName>
    <displayFormat>{000000000}</displayFormat>
    <label>Workstep Number</label>
    <type>AutoNumber</type>
</CustomField>