main/default/objects/Workstep__c/fields/Workstep_Owner__c.field-meta.xml
<CustomField>
    <fullName>Workstep_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Workstep Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Worksteps</relationshipName>
    <type>Lookup</type>
</CustomField>