main/default/objects/Workstep__c/fields/workstep_tag__c.field-meta.xml
<CustomField>
    <fullName>workstep_tag__c</fullName>
    <inlineHelpText>Enter a tag here that will help you identify or note this workstep</inlineHelpText>
    <label>Tag</label>
    <length>20</length>
    <type>Text</type>
</CustomField>