main/default/objects/Workstep__c/validationRules/Customer_Acceptance_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Acceptance_Date_Required</fullName>
    <active>true</active>
    <description>Customer Acceptance Date must be populated on the suborder before the Send to Billing task can be set to complete.</description>
    <errorConditionFormula>ISNULL( Sub_Order__r.Customer_Acceptance_Date__c ) &amp;&amp;  ISPICKVAL(  Template__r.External_Callout_Type__c , &#39;SendToBilling&#39;) &amp;&amp;  ISPICKVAL( Status__c , &#39;Integrating&#39;)</errorConditionFormula>
    <errorMessage>Customer Acceptance Date must be populated on the suborder before the Send to Billing task can be set to complete.</errorMessage>
</ValidationRule>