main/default/objects/Workstep__c/validationRules/Customer_Commit_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Commit_Date_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISNULL(Sub_Order__r.Customer_Commit_Date__c) &amp;&amp; Name=&#39;Set Commit Date&#39; &amp;&amp; ISPICKVAL(Status__c , &#39;Complete&#39;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Customer Commit Date must be populated on the Sub-Order before this workstep can be completed.</errorMessage>
</ValidationRule>