main/default/objects/Workstep__c/validationRules/Customer_Commit_Date_Required_On_SIP.validationRule-meta.xml
<ValidationRule>
    <fullName>Customer_Commit_Date_Required_On_SIP</fullName>
    <active>false</active>
    <errorConditionFormula>ISNULL(Sub_Order__r.Customer_Commit_Date__c) &amp;&amp; Name=&#39;Set SIP Commit Date&#39; &amp;&amp; ISPICKVAL(Status__c , &#39;Complete&#39;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Customer Commit Date must be populated on the Sub-Order before this workstep can be completed.</errorMessage>
</ValidationRule>