main/default/objects/Workstep__c/validationRules/Multisite_answer_must_apply_on_Issue_DES.validationRule-meta.xml
<ValidationRule>
    <fullName>Multisite_answer_must_apply_on_Issue_DES</fullName>
    <active>true</active>
    <description>If a Build Order has the workstep of Issue DES open with &gt; 0 duration, and someone tries to complete it, they must first answer if multi-site equipment is needed (yes or no) - on orders created after 10/31.</description>
    <errorConditionFormula>datevalue(Order__r.CreatedDate)&gt; Date(2016,10,31) &amp;&amp;
contains (Order__r.RecordType.Name, &#39;Build Order&#39;) &amp;&amp;
Name=&#39;Issue DES&#39; &amp;&amp; 
ISPICKVAL(Status__c , &#39;Complete&#39;) &amp;&amp;
 ISPICKVAL(Order__r.Multi_site_Installation_Required__c, &#39;&#39;) &amp;&amp;
 Duration__c &gt; 0</errorConditionFormula>
    <errorMessage>You must indicate on the build order if multi-site installation is required.</errorMessage>
</ValidationRule>