main/default/objects/Workstep__c/validationRules/Populate_Software_PO.validationRule-meta.xml
<ValidationRule>
    <fullName>Populate_Software_PO</fullName>
    <active>true</active>
    <description>Must populate the Software PO# field before completing the Order Software step on the UC/ITS plans</description>
    <errorConditionFormula>ISBLANK(Sub_Order__r.Software_PO__c) &amp;&amp; Name=&#39;Order Software&#39; &amp;&amp; ISPICKVAL(Status__c , &#39;Complete&#39;)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Software PO# must be populated on the SubOrder before the Order Software workstep can be completed.</errorMessage>
</ValidationRule>