main/default/objects/Workstep__c/validationRules/Schedule_Resource_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Schedule_Resource_Date_Required</fullName>
    <active>false</active>
    <description>2 date fields (Activate with Customer Date, Hardware install and test Date) need to be populated before the Schedule resource workstep can be set to complete</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &#39;Complete&#39;), OR( ISNULL(Sub_Order__r.Activate_with_Customer_Date__c),  ISNULL(Sub_Order__r.Hardware_Install_and_Test_Date__c)), ISPICKVAL(Attribute__c  , &#39;Schedule Resources&#39;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You can&#39;t set the status to &#39;Complete&#39; if you didn&#39;t set &#39;CLICK Activate Date&#39; and &#39;CLICK Install Date&#39; fields first.</errorMessage>
</ValidationRule>