main/default/objects/Workstep__c/validationRules/Schedule_SIP_Activate_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Schedule_SIP_Activate_Date_Required</fullName>
    <active>true</active>
    <description>&#39;CLICK Activate Date&#39; field first needs to be populated before the Schedule SIP Activation Resources workstep can be set to complete.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &#39;Complete&#39;), OR( ISNULL(Sub_Order__r.Activate_with_Customer_Date__c)), ISPICKVAL(Attribute__c , &#39;Schedule SIP Activation Resources&#39;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You can&#39;t set the status to &#39;Complete&#39; if you didn&#39;t set &#39;CLICK Activate Date&#39; field first.</errorMessage>
</ValidationRule>