main/default/objects/Workstep__c/listViews/Access_Management_Workstep.listView-meta.xml
<ListView>
    <fullName>Access_Management_Workstep</fullName>
    <filterScope>Queue</filterScope>
    <label>Access Management</label>
    <queue>Access_Management</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>