main/default/objects/Workstep__c/listViews/Ancillary_Services_Workstep.listView-meta.xml
<ListView>
    <fullName>Ancillary_Services_Workstep</fullName>
    <filterScope>Queue</filterScope>
    <label>Ancillary Services</label>
    <queue>Ancillary_Services</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>