main/default/objects/Workstep__c/listViews/Application_Operations_Center_Workstep.listView-meta.xml
<ListView>
    <fullName>Application_Operations_Center_Workstep</fullName>
    <filterScope>Queue</filterScope>
    <label>Application Operations Center</label>
    <queue>Application_Operations_Center</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>