main/default/objects/Workstep__c/listViews/CAN_SIP_Order_Management_Workstep.listView-meta.xml
<ListView>
    <fullName>CAN_SIP_Order_Management_Workstep</fullName>
    <filterScope>Queue</filterScope>
    <label>CAN-SIP-Order Management</label>
    <queue>CAN_SIP_Order_Management</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>