main/default/objects/Workstep__c/listViews/CDN_Network_Optimization_Workstep.listView-meta.xml
<ListView>
    <fullName>CDN_Network_Optimization_Workstep</fullName>
    <filterScope>Queue</filterScope>
    <label>CDN Network Optimization</label>
    <queue>CDN_Network_Optimization</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>