main/default/objects/Workstep__c/listViews/CS_PortOut_Workstep.listView-meta.xml
<ListView>
    <fullName>CS_PortOut_Workstep</fullName>
    <filterScope>Queue</filterScope>
    <label>CS-PortOut</label>
    <queue>CS_PortOut</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>