main/default/objects/Workstep__c/listViews/Data_Internet_Design_Workstep.listView-meta.xml
<ListView>
    <fullName>Data_Internet_Design_Workstep</fullName>
    <filterScope>Queue</filterScope>
    <label>Data/Internet-Design</label>
    <queue>Data_Internet_Design</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>