main/default/objects/Workstep__c/listViews/Data_Internet_Order_Entry_Workstep.listView-meta.xml
<ListView>
    <fullName>Data_Internet_Order_Entry_Workstep</fullName>
    <filterScope>Queue</filterScope>
    <label>Data/Internet-Order Entry</label>
    <queue>Data_Internet_Order_Entry</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>