main/default/objects/Workstep__c/listViews/Data_Order_Management_Workstep.listView-meta.xml
<ListView>
    <fullName>Data_Order_Management_Workstep</fullName>
    <filterScope>Queue</filterScope>
    <label>Data-Order Management</label>
    <queue>Data_Order_Management</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>