main/default/objects/Workstep__c/listViews/Engineering_Field_Engineering.listView-meta.xml
<ListView>
    <fullName>Engineering_Field_Engineering</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Order__c</columns>
    <columns>Sub_Order__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Access_Types__c</columns>
    <columns>Duration__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Duration__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete,Cancelled</value>
    </filters>
    <label>Engineering-Field Engineering</label>
    <queue>Engineering_Field_Engineering</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>