main/default/objects/Workstep__c/listViews/Field_Resources_CDA_Workstep.listView-meta.xml
<ListView>
    <fullName>Field_Resources_CDA_Workstep</fullName>
    <filterScope>Queue</filterScope>
    <label>Field Services (CDA)</label>
    <queue>Field_Services_CDA</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>